# sdf_atlas

./: .gitignore  CMakeLists.txt
cmake/modules/: FindGLEW.cmake
includes/glad/: glad.h
lib/: glad.c
src/: gl_utils.cpp  gl_utils.h  glyph_painter.cpp  main.cpp  sdf_gl.cpp  sdf_gl.h
